# ClusteredTransforms

./: .pre-commit-config.yaml  README.md  pyproject.toml
clustered_transforms/: __about__.py
clustered_transforms/scale_clustering/: _cluster.py  _functions.py  _transform.py
examples/scale_clustering/: Clustered_Normalization.ipynb  Clustered_Scale_Transform.ipynb
tests/scale_clustering/: test_integral.py
